--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <link href="/build/app.css" rel="stylesheet">
   <script src="/build/app.js"></script>
 
-  <link rel="apple-touch-icon" href="/assets/icon/icon.png">
+  <link rel="apple-touch-icon" sizes="128x128" href="/assets/icon/qpicon.png">
   <link rel="icon" type="image/x-icon" href="/assets/icon/favicon.ico">
   <link rel="manifest" href="/manifest.json">
 </head>
